# farm

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SPECS.md  quest_diagram.html
.ai/: CODEX_SKILLS.md  SINGLE_SOURCE_OF_TRUTH.md  claude.md  codex.md  cursor.md
.ai/agents/: architect.md  finalizer.md  implementer.md  refactorer.md  security-agent.md  spec-writer.md  tdd-agent.md  verifier.md  xr-specialist.md
.claude/: settings.json
.codex/: config.toml
ProjectSettings/: AudioManager.asset  EditorBuildSettings.asset  EditorSettings.asset  InputManager.asset  NavMeshAreas.asset  ProjectSettings.asset  TagManager.asset
mccluckin-gtm/: .env.example  Procfile  README.md  alembic.ini  cli.py  config.py  logging_utils.py  pyproject.toml  railway.json  requirements.txt  runtime.py  web.py
mccluckin-gtm/alembic/: env.py
mccluckin-gtm/alembic/versions/: 20260414_0001_initial_schema.py  20260414_0002_lead_decision_note.py
mccluckin-gtm/db/: __init__.py  control.py  models.py  session.py
mccluckin-gtm/docs/: gtm-automation-spec.md
mccluckin-gtm/drafter/: generate.py
mccluckin-gtm/monitor/: __init__.py  audience.py  keywords.py  reddit.py  twitter.py
mccluckin-gtm/publisher/: reddit.py  service.py  twitter.py
mccluckin-gtm/review/: app.py
mccluckin-gtm/scheduler/: content_calendar.py
mccluckin-gtm/templates/: index.html
mccluckin-gtm/tests/: conftest.py  test_calendar.py  test_drafter.py  test_monitor.py  test_pipeline.py  test_publisher.py  test_runtime.py  test_twitter_publisher.py  test_web.py
(+2010 files in other folders)
